// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExchangeCard > should render 1`] = `
<div>
  <div
    data-testid="ExchangeCard--changenow"
  >
    <div>
      <button
        class="css-1h3vw5n"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex flex-col items-center md:flex-row gap-3"
        >
          <div
            class="h-11 w-11 shrink-0 overflow-hidden rounded-lg"
          >
            <img
              alt="ChangeNOW Logo"
              class="h-full w-full object-cover"
              src="https://exchanges.arkvault.io/images/changenow/thumbnail.png"
            />
          </div>
          <div
            class="flex flex-col truncate"
          >
            <div
              class="truncate text-sm md:text-lg font-semibold link"
            >
              ChangeNOW
            </div>
          </div>
        </div>
        <div
          class="absolute -right-1 -top-1 m-4 flex items-center space-x-1"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`ExchangeCard > should render when the exchange is not active 1`] = `
<div>
  <div
    data-testid="ExchangeCard--changenow"
  >
    <div>
      <button
        class="css-1h3vw5n"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex flex-col items-center md:flex-row gap-3"
        >
          <div
            class="h-11 w-11 shrink-0 overflow-hidden rounded-lg"
          >
            <img
              alt="ChangeNOW Logo"
              class="h-full w-full object-cover"
              src="https://exchanges.arkvault.io/images/changenow/thumbnail.png"
            />
          </div>
          <div
            class="flex flex-col truncate"
          >
            <div
              class="truncate text-sm md:text-lg font-semibold text-theme-primary-100 dark:text-theme-secondary-800"
            >
              ChangeNOW
            </div>
          </div>
        </div>
        <div
          class="absolute -right-1 -top-1 m-4 flex items-center space-x-1"
        />
      </button>
    </div>
  </div>
</div>
`;
